<?xml version="1.0" encoding="utf-8"?>
<!-- item_user.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/userInfosLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="@dimen/spacing_quark"
        android:layout_marginBottom="@dimen/spacing_xm"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                tool:text="Teste"
                android:textSize="16sp"
                android:textColor="@color/dark_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userLocationTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                tool:text="Teste"
                android:textSize="16sp"
                android:textColor="@color/dark_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userBioTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                tool:text="Teste"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repo_quantity"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/repositoryQuantityTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                tool:text="Teste"
                android:textSize="16sp"
                android:textColor="@color/dark_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/companyTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                tool:text="Teste"
                android:textColor="@color/dark_gray" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

