<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_inventory"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to the App"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/seeAllRepositoriesBTN"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/main"
        android:text="@string/list_all_repositories"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/findByUserBTN"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/main"
        android:text="@string/find_user_repositories"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/seeAllRepositoriesBTN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/findUserInfoBTN"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/main"
        android:text="@string/find_user_infos"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/findByUserBTN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
